Home page validations hide and icon alignment fixes
Home page validations hide and icon alignment fixes

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -19,7 +19,7 @@
   .eye-icon {
     position: absolute;
     right: -4px;
-    top: -20px !important;
+    top: -16px !important;
   }
 }
 
